--- a/AnunciosWebAppMVC/AnunciosWebAppMVC/Views/Anuncios/Lista.cshtml
+++ b/AnunciosWebAppMVC/AnunciosWebAppMVC/Views/Anuncios/Lista.cshtml
@@ -12,7 +12,7 @@
                 <div class="d-inline text-success text-center mb-5">
                     <h5>Buscador de Anuncios</h5>
                 </div>
-                <form asp-action="Buscar" class="col h-100">
+                <form class="col h-100">
                     <div class="form-group h-25">
                         <label for="formGroupExampleInput">Anuncio</label>
                         <input type="text" class="form-control" id="findtext" placeholder="Teclee entrada">
@@ -20,7 +20,7 @@
                     </div>
                     <div class="form-group h-25">
                         <label class="control-label">Tipo</label>
-                        <select class="form-control" asp-items="ViewBag.tipos"></select>
+                        <select class="form-control" asp-items="ViewBag.tipos" id="findselect"></select>
                     </div>
                     <div class="row form-group h-25 mx-sm-3 mb-2">
                         <div class="col">
@@ -32,18 +32,23 @@
                             <input type="text" class="form-control" id="findmax" placeholder="Maximo">
                         </div>
                     </div>
+                    <div class="form-group h-25 text-center">
+                        <div class="col">
+                            <button type="submit" id="btnfind" onclick="javascript:ReloadEvents(findtext.value, findselect.value, findmax.value, findmin.value)" class="btn btn-primary">Buscar</button>
+                        </div>
+                    </div>
+                    </form>
+                <div class="row"></div>
+                <div class="row ">
+                    @{var country = (AnunciosWebMVC.Anuncios.Servicios.Models.PaginaModelo)ViewBag.mipagina;}
+                    @await Html.PartialAsync("_paginador", country)
+                </div>
+            </div>
 
-                    <button type="submit" id="btnfind" onclick="javascript:ReloadEvents(findtext.value, findselect.value, findmin.value, findmin.value)" class="btn btn-primary">Buscar</button>
-                </form>
-            </div>
-            <div class="row">
-                @{var country = (AnunciosWebMVC.Anuncios.Servicios.Models.PaginaModelo)ViewBag.mipagina;}
-                @await Html.PartialAsync("_paginador", country)
-            </div>
 
         </div>
          <div class="col-8">
-                        <div class="row" id="listavista">
+             <div class="row" id="listavista">
                 @await Html.PartialAsync("_Listavista", Model)
             </div>
 
