--- a/AnunciosWebAppMVC/AnunciosWebAppMVC/Views/Anuncios/Delete.cshtml
+++ b/AnunciosWebAppMVC/AnunciosWebAppMVC/Views/Anuncios/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model AnunciosWebMVC.Anuncios.Servicios.Models.Anuncio
+﻿@model AnunciosWebMVC.Anuncios.Servicios.DataTransferO.AnuncioView
 
 @{
     ViewData["Title"] = "Delete";
@@ -17,10 +17,10 @@
                 @Html.DisplayFor(model => model.Titulo)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.IdTipo)
+                @Html.DisplayNameFor(model => model.Tipo)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.IdTipo)
+                @Html.DisplayFor(model => model.Tipo)
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Precio)
