--- a/AnunciosWebAppMVC/AnunciosWebAppMVC/Views/Anuncios/Index.cshtml
+++ b/AnunciosWebAppMVC/AnunciosWebAppMVC/Views/Anuncios/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AnunciosWebMVC.Anuncios.Servicios.Models.Anuncio>
+﻿@model IEnumerable<AnunciosWebMVC.Anuncios.Servicios.DataTransferO.AnuncioView>
 
 @{
     ViewData["Title"] = "Anuncios Publicados";
@@ -16,7 +16,7 @@
                     @Html.DisplayNameFor(model => model.Titulo)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.IdTipo)
+                    @Html.DisplayNameFor(model => model.Tipo)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Precio)
@@ -35,7 +35,7 @@
                         @Html.DisplayFor(modelItem => item.Titulo)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.IdTipo)
+                        @Html.DisplayFor(modelItem => item.Tipo)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Precio)
