--- a/AnunciosWebAppMVC/AnunciosWebAppMVC/Views/Correos/Create.cshtml
+++ b/AnunciosWebAppMVC/AnunciosWebAppMVC/Views/Correos/Create.cshtml
@@ -29,7 +29,7 @@
                     <span asp-validation-for="Mensaje" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="Enviar" class="btn btn-primary" />
                 </div>
             </form>
         </div>
